Gaim: The Pimpin' Penguin IM Clone that's good for the soul!

version 0.67
	* Brought back the message notification plugin (Brian Tarricone)
	  You'll need to reconfigure your settings for this plugin
	* Various bug fixes (larne from irc, Tim Ringenbach, Bjoern 
	  Voigt, Paul A (darkrain))
	* British English "translation" updated (Sam Halliday)
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Dutch translation updated (Vincent van Adrighem)
	* German translation updated (Bjoern Voigt)
	* Hungarian translation updated (Zoltan Sutto)
	* Italian translation updated (Luca Beltrame, Claudio Satriano)
	* Portuguese (Brazilian) translation updated (Mauricio de Lemos Rodrigues Collares 
	  Neto)
	* Serbian translation updated (Danilo Segan)
	* Spanish translation updated (Javier Fernandez-Sanguino Pena)
	* Danish translation updated (Morten Brix Pedersen)

version 0.66 (07/18/2003):
	* Freebsd compile fix (Matthew Luckie)
	* .spec file improvements (Ethan Blanton)
	* Added a gaim-remote man page (Robert McQueen)
	* The Remote Control plugin no longer adds duplicate groups to your
	  buddy list.
	* Servers and ports are now imported correctly in MSN.
	* Core/UI split the core initialization and shutdown.
	* MSN messages with newlines are now sent correctly to MSN clients.
	* Italian translation updated (Claudio Satriano)
	* British English "translation" added (Sam Halliday)
	* Fix some sound initialization stuff
	* Updated  Portuguese (Brazilian) translation
	  (Mauricio de Lemos Rodrigues Collares Neto)
	* Updated Czech translation (Miloslav Trmac)
	* Fix saving and import of default away message

version 0.65 (07/16/2003):
	* French translation updated (Eric (Zongo) Boumaour)
	* Portuguese (Brazilian) translation added (Mauricio de Lemos Rodrigues Collares Neto)
	* Korean translation updated (Kyung-uk Son)
	* Japanese translation updated (Junichi Uekawa)
	* Hebrew translation added (Pavel Bibergal)