@@ -1,8 +1,32 @@
-EXTRA_DIST = activebuddy.png admin.png aim.png aol.png away.png dnd.png \
-			 extendedaway.png female.png freeforchat.png gadu-gadu.png \
-			 game.png icq.png invisible.png irc.png jabber.png login.png \
-			 logout.png male.png msn.png na.png napster.png notauthorized.png \
-			 occupied.png offline.png trepia.png wireless.png yahoo.png
+EXTRA_DIST = \
+	activebuddy.png \
+	admin.png \
+	aim.png \
+	aol.png \
+	away.png \
+	dnd.png \
+	extendedaway.png \
+	female.png \
+	freeforchat.png \
+	gadu-gadu.png \
+	game.png \
+	hiptop.png \
+	icq.png \
+	invisible.png \
+	irc.png \
+	jabber.png \
+	login.png \
+	logout.png \
+	male.png \
+	msn.png \
+	na.png \
+	napster.png \
+	notauthorized.png \
+	occupied.png \
+	offline.png \
+	trepia.png \
+	wireless.png \
+	yahoo.png
 
 gaimstatuspixdir = $(datadir)/pixmaps/gaim/status/default
 
